# geist

./: .gitignore  AGENTS.md  AnchorInvariants.md  BetterLighting.md  BlockSupport.md  BulletproofLightingPlan.md  Cargo.toml  ChunkPerformance.md  ChunkPlan.md  CodeIssues.md  CratePlan.md  DecoupleLightingPlan.md  DialsAlgorithm.md  EditPrioritization.md  EventPrioritization.md  EventSystemIssues.md  FactorioLikeEventSourcing.md  FallbackAnalysis.md  FlyingCastle.md  ImprovementPlan.md  LOD.md  LightingAlgorithmAlternatives.md  LightingAlgorithmNextSteps.md  LightingAlternatives.md  MESHER_REFACTOR_PLAN.md  MVCCLightingPlan.md  MesherPlan.md  MicroVoxelLighting.md  ModularityPlan.md  NewLight.md  NewLighting.md  NewTerrainPlan.md  PerformanceBrainstorm.md  PotentialRaceConditions.md  README.md  RuntimeVoxelsPlan.md  SparsePlan.md  StreamingPlan.md  StructureAlignmentPlan.md  StructureAnchorPlan.md  (+8 more)
assets/blocks/: grass_side.tga  mangrove_leaves_carried.tga
assets/shaders/: voxel_alpha_clip.fs  voxel_alpha_clip.vs  voxel_alpha_clip_fog.fs  voxel_fog_leaves.fs  voxel_fog_textured.fs  voxel_fog_textured.vs  voxel_fxaa.fs  voxel_water.fs
assets/voxels/: blocks.toml  hotbar.toml  materials.toml  palette_map.toml
assets/worldgen/: worldgen.toml
crates/geist-blocks/: Cargo.toml
crates/geist-blocks/src/: config.rs  lib.rs  material.rs  micro.rs  registry.rs  types.rs
crates/geist-blocks/tests/: prop_registry.rs
crates/geist-chunk/: Cargo.toml
crates/geist-chunk/src/: lib.rs
crates/geist-chunk/tests/: prop_chunk.proptest-regressions  prop_chunk.rs
crates/geist-edit/: Cargo.toml
crates/geist-edit/src/: lib.rs
crates/geist-geom/: Cargo.toml
crates/geist-geom/src/: lib.rs
crates/geist-geom/tests/: prop_aabb.proptest-regressions  prop_aabb.rs  prop_vec3.proptest-regressions  prop_vec3.rs  vec3_aabb_tests.rs
crates/geist-io/: Cargo.toml
crates/geist-io/src/: lib.rs
crates/geist-lighting/: Cargo.toml
crates/geist-lighting/src/: lib.rs  micro.rs  micro_iter.rs  tests.rs
crates/geist-lighting/tests/: prop_borders.rs
crates/geist-mesh-cpu/: Cargo.toml  README.md
crates/geist-mesh-cpu/benches/: wcc.rs
crates/geist-mesh-cpu/src/: build.rs  chunk.rs  constants.rs  emit.rs  face.rs  lib.rs  mesh_build.rs  microgrid_tables.rs  neighbors.rs  parity.rs  util.rs  wcc.rs
crates/geist-mesh-cpu/tests/: prop_microgrid.rs  wcc.rs
crates/geist-render-raylib/: Cargo.toml
crates/geist-render-raylib/src/: lib.rs
crates/geist-runtime/: Cargo.toml
crates/geist-runtime/src/: column_cache.rs  gen_ctx_pool.rs  lib.rs
crates/geist-structures/: Cargo.toml
crates/geist-structures/src/: lib.rs
crates/geist-ui/: Cargo.toml  MissingUIFeatures.md  README.md
crates/geist-ui/src/: lib.rs  text.rs  windows.rs
crates/geist-ui/src/windows/: chrome.rs  manager.rs  mod.rs  overlay.rs  tab_strip.rs  theme.rs  types.rs  util.rs
crates/geist-world/: Cargo.toml
crates/geist-world/src/: lib.rs  voxel.rs  worldgen.rs
crates/geist-world/src/voxel/: chunk_coord.rs  gen_ctx.rs  generation.rs  mod.rs  overview.rs  tile_cache.rs  world.rs
crates/geist-world/src/voxel/generation/: caves.rs  column_plan.rs  column_sampler.rs  mod.rs  surface.rs  tower.rs  trees.rs  water.rs
schematics/: 0213-wizard.schem  anvilstead.schem  lakeside-manor.schem  roseridge-manor.schem  willowpoint-manor-full.schem
scripts/: bundle_lighting.py  flamegraph_wcc.sh  terrain_metrics_probe.sh
src/: app.rs  assets.rs  camera.rs  chunkbuf.rs  edit.rs  event.rs  gamestate.rs  lighting.rs  main.rs  mcworld.rs  mesher.rs  meshing_core.rs  meshutil.rs  microgrid_tables.rs  player.rs  raycast.rs  runtime.rs  schem.rs  shaders.rs  snapshowcase.rs  stairs_tests.rs  structure.rs  texture_cache.rs  voxel.rs
src/app/: attachment.rs  day_cycle.rs  events.rs  init.rs  mod.rs  render.rs  runtime.rs  state.rs  step.rs  sun.rs  watchers.rs  windows.rs
src/app/events/: builds.rs  editing.rs  helpers.rs  lighting.rs  logging.rs  mod.rs  movement.rs  streaming.rs  toggles.rs
src/app/render/: common.rs  frame.rs  minimap.rs  mod.rs
src/app/render/frame/: hud.rs  mod.rs  overlay.rs  stats.rs  world.rs
src/app/render/views/: attachment.rs  chunk_voxel.rs  histograms.rs  mod.rs  render_stats.rs  runtime_stats.rs
src/blocks/: config.rs  material.rs  mod.rs  registry.rs  types.rs
src/worldgen/: mod.rs
