[package]
name = "geist"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
fastnoise-lite = "1.1.1"
log = "0.4"
env_logger = "0.11"
mc_schem = "1.1"
simplelog = "0.12"
fastnbt = "2.5"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

[features]
default = []
# Enable Bedrock .mcworld support (requires additional crates)
mcworld = ["dep:bedrock-hematite-nbt", "dep:zip"]

[dependencies.bedrock-hematite-nbt]
version = "0.4"
optional = true

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate"]
optional = true
