[package]
name = "geist"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
fastnoise-lite = "1.1.1"
log = "0.4"
env_logger = "0.11"
mc_schem = "1.1"
simplelog = "0.12"
fastnbt = "2.5"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
notify = "6"
geist-geom = { path = "crates/geist-geom" }
geist-blocks = { path = "crates/geist-blocks" }
geist-world = { path = "crates/geist-world" }
geist-chunk = { path = "crates/geist-chunk" }
geist-lighting = { path = "crates/geist-lighting" }
geist-render-raylib = { path = "crates/geist-render-raylib" }
geist-mesh-cpu = { path = "crates/geist-mesh-cpu" }
geist-runtime = { path = "crates/geist-runtime" }

[features]
default = []
# Enable Bedrock .mcworld support (requires additional crates)
mcworld = ["dep:bedrock-hematite-nbt", "dep:zip"]

[dependencies.bedrock-hematite-nbt]
version = "0.4"
optional = true

[workspace]
members = [
    ".",
    "crates/geist-geom",
    "crates/geist-blocks",
    "crates/geist-world",
    "crates/geist-chunk",
    "crates/geist-lighting",
    "crates/geist-mesh-cpu",
    "crates/geist-runtime",
    "crates/geist-structures",
    "crates/geist-edit",
    "crates/geist-io",
    "crates/geist-render-raylib",
]
resolver = "2"

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate"]
optional = true
