[package]
name = "geist"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
fastnoise-lite = "1.1.1"
log = "0.4"
env_logger = "0.11"
## mc_schem now used in geist-io
# mc_schem = "1.1"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
notify = "6"
geist-geom = { path = "crates/geist-geom" }
geist-blocks = { path = "crates/geist-blocks" }
geist-world = { path = "crates/geist-world" }
geist-chunk = { path = "crates/geist-chunk" }
geist-lighting = { path = "crates/geist-lighting" }
geist-render-raylib = { path = "crates/geist-render-raylib" }
geist-mesh-cpu = { path = "crates/geist-mesh-cpu" }
geist-runtime = { path = "crates/geist-runtime" }
geist-structures = { path = "crates/geist-structures" }
geist-edit = { path = "crates/geist-edit" }
geist-io = { path = "crates/geist-io" }
hashbrown = "0.14"

[features]
default = []

## mcworld removed

[workspace]
members = [
    ".",
    "crates/geist-geom",
    "crates/geist-blocks",
    "crates/geist-world",
    "crates/geist-chunk",
    "crates/geist-lighting",
    "crates/geist-mesh-cpu",
    "crates/geist-runtime",
    "crates/geist-structures",
    "crates/geist-edit",
    "crates/geist-io",
    "crates/geist-render-raylib",
]
resolver = "2"

## mcworld removed

[profile.flamegraph]
inherits = "release"
debug = true
lto = false
codegen-units = 1
