[package]
name = "geist-lighting"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
geist-blocks = { path = "../geist-blocks" }
geist-chunk = { path = "../geist-chunk" }
geist-world = { path = "../geist-world" }
rayon = "1.10"

[dev-dependencies]
proptest = "1"

[features]
default = ["dial_queues"]
dial_queues = []
