[package]
name = "geist-mesh-cpu"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
# Parity/XOR-based mesher (v3). On by default.
default = ["parity_mesher"]
parity_mesher = []

[dependencies]
geist-geom = { path = "../geist-geom" }
geist-blocks = { path = "../geist-blocks" }
geist-chunk = { path = "../geist-chunk" }
geist-lighting = { path = "../geist-lighting" }
geist-world = { path = "../geist-world" }
log = "0.4"

[dev-dependencies]
proptest = "1"
criterion = "0.7.0"

[[bench]]
name = "wcc"
harness = false
