[package]
name = "geist-render-raylib"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
raylib = "5.5.1"
geist-geom = { path = "../geist-geom" }
geist-blocks = { path = "../geist-blocks" }
geist-mesh-cpu = { path = "../geist-mesh-cpu" }
geist-lighting = { path = "../geist-lighting" }
geist-world = { path = "../geist-world" }
