[package]
name = "geist-runtime"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
geist-blocks = { path = "../geist-blocks" }
geist-world = { path = "../geist-world" }
geist-chunk = { path = "../geist-chunk" }
geist-lighting = { path = "../geist-lighting" }
geist-mesh-cpu = { path = "../geist-mesh-cpu" }
crossbeam-channel = "0.5"
hashbrown = "0.14"
rayon = "1.10"
